fix: products on safari

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1434,6 +1434,8 @@ a.product__text {
 .product-media-container .product__modal-opener {
   display: block;
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (min-width: 750px) {
